# tesseract

./: .gitignore  CMakeLists.txt
.github/workflows/: autotools.yml  cmake.yml  sw.yml  vcpkg.yml
cmaketest/: CMakeLists.txt  basicapitest.cpp  build.sh
